# Codea-Runtime

./: make_project.sh
CodeaTemplate/: CMakeLists.txt  PROJNAME.pro
CodeaTemplate/CodeaTemplate.xcodeproj/: project.pbxproj
CodeaTemplate/Codify/: mainwindow.cpp  mainwindow.ui
CodeaTemplate/Codify/Resources/Shaders/: ColorTextureTransform.vsh  FillColorTextureTransform.vsh
